--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Hello World</h1>
-<p>SUP BWAH</p>
+<h1>ELEPHANT CRUNCH CEREAL IS AWESOME!!!!</h1>
+<p>Print your own elephant mazes at home!</p>
   <img src=" elephant maze 1.JPG">
 </body>
 </html>
