--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html>
 <body>
+<style>
+  h1 {text-align: center;}
+  p {text-align: center;}
+</style>
 <h1>ELEPHANT CRUNCH CEREAL IS AWESOME!!!!</h1>
 <p>Print your own elephant mazes at home!</p>
   <img src=" elephant maze 1.JPG">
