--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </style>
 <h1>ELEPHANT CRUNCH CEREAL IS AWESOME!!!!</h1>
 <p>Print your own elephant mazes at home!</p>
-  <img src=" elephant maze 1.JPG">
+  <img src=" elephant maze 1.JPG" class="center">
 </body>
 </html>
