--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
   p {text-align: center;}
 </style>
 <h1>ELEPHANT CRUNCH CEREAL IS AWESOME!!!!</h1>
-<p>Print your own elephant mazes at home!</p>
-  <img src=" elephant maze 1.JPG" class="center">
+<p>Print your own elephant mazes at home!
+<img src=" elephant maze 1.JPG"">
+</p>
+  
 </body>
 </html>
