--- a/index.html
+++ b/index.html
@@ -11,6 +11,12 @@
   <p>
 <img src=" elephant maze 1.JPG"">
 </p>
+  <p>
+<img src="elephant-maze-2.JPG"">
+</p>
+    <p>
+<img src="elephant-maze-3.JPG"">
+</p>
   
 </body>
 </html>
