--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   h1 {text-align: center;}
   p {text-align: center;}
 </style>
-<h1>ELEPHANT CRUNCH CEREAL IS AWESOME!!!!</h1>
+<h1><img src="elephant-crunch-banner.JPG"></h1>
 <p>Print your own elephant mazes at home!
 </p>
   <p>
