--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   p {text-align: center;}
 </style>
 <h1><img src="elephant-crunch-banner.JPG"></h1>
-<p>Print your own elephant mazes at home!
+<p><img src="print-mazes.JPG"">
 </p>
   <p>
 <img src=" elephant maze 1.JPG"">
