--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   h1 {text-align: center;}
   p {text-align: center;}
 </style>
-<h1><img src="elephant-crunch-banner.JPG"></h1>
+<h1><img src="Elephant Crunch banner 2.JPG"></h1>
 <p><img src="print-mazes.JPG"">
 </p>
   <p>
